Fix spacing of cart in domain header (#45262)

--- a/client/my-sites/domains/domain-management/list/style.scss
+++ b/client/my-sites/domains/domain-management/list/style.scss
@@ -334,7 +334,7 @@ input[type='radio'].domain-management-list-item__radio {
 	display: flex;
 
 	.popover-cart {
-		margin-right: 4px;
+		margin-right: 8px;
 	}
 
 	.popover-cart .header-button, .popover-cart .header-button:hover {
